styles and navigation

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
 <!--Angular UI Router-->
 <script src="./assets/js/angular-ui-router.min.js"></script>
 
+<!--Angular i18n-->
+<script src="./assets/js/angular-locale_el-gr.js"></script>
+
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
@@ -50,13 +53,19 @@
 <!--Directives-->
 <script src="app/directives/errsrc.directive.js"></script>
 
+<!--Services-->
+<script src="./app/services/http.service.js"></script>
+<script src="./app/services/api.service.js"></script>
+
 <!--Components-->
 <script src="./app/components/app/app.component.js"></script>
 <script src="./app/components/app-header/appheader.component.js"></script>
 <script src="./app/components/app-footer/appfooter.component.js"></script>
-<script src="./app/components/steps/steps.component.js"></script>
+<script src="./app/components/select-family/selectfamily.component.js"></script>
 <script src="./app/components/select-model/selectmodel.component.js"></script>
 <script src="./app/components/car/car.component.js"></script>
+<script src="./app/components/select-options/selectoptions.component.js"></script>
+<script src="./app/components/select-options/steps/steps.component.js"></script>
 
 
 </html>
