--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,46 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" ng-app="configurator">
+<html class="no-js"
+      ng-app="configurator"
+      ng-controller="BaseCtrl as base">
 <!--<![endif]-->
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Configurator</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible"
+	      content="IE=edge">
+	<title>Configurator</title>
+	<meta name="description"
+	      content="">
+	<meta name="viewport"
+	      content="width=device-width, initial-scale=1">
 </head>
 
 <!-- Bootstrap 3.3.7 -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
 
-<link rel="stylesheet" href="./assets/styles/css/main.css">
+<link rel="stylesheet"
+      href="./assets/styles/css/main.css">
 
-<body class="{{base.theme}}" ng-controller="BaseCtrl as base">
-    <!--[if lt IE 7]>
+<link rel="shortcut icon"
+      ng-href="assets/img/{{base.theme}}-favicon.ico"
+      type="image/x-icon">
+<link rel="icon"
+      ng-href="assets/img/{{base.theme}}-favicon.ico"
+      type="image/x-icon">
+
+<body class="{{base.theme}}">
+	<!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <div ui-view></div>
+
+	<div ui-view></div>
+
 
 </body>
 
@@ -33,8 +50,9 @@
 <script src="./assets/js/jquery.min.js"></script>
 
 <!--Bootstrap JS-->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
 <!--Angular 1.6.4-->
 <script src="./assets/js/angular.min.js"></script>
@@ -51,7 +69,7 @@
 <script src="./app/core/base.controller.js"></script>
 
 <!--Directives-->
-<script src="app/directives/errsrc.directive.js"></script>
+<script src="./app/directives/errsrc.directive.js"></script>
 
 <!--Services-->
 <script src="./app/services/http.service.js"></script>
