steps link to views, first step display data

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous">
 
+<!--trNgGrid Tables-->
+<link rel="stylesheet"
+      href="./assets/styles/css/trNgGrid.min.css">
+
 <link rel="stylesheet"
       href="./assets/styles/css/main.css">
 
@@ -63,13 +67,20 @@
 <!--Angular i18n-->
 <script src="./assets/js/angular-locale_el-gr.js"></script>
 
+<!--trNgGrid Tables-->
+<script src="./assets/js/trNgGrid.min.js"></script>
+
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
+<script src="./app/core/app.constants.js"></script>
 <script src="./app/core/base.controller.js"></script>
 
 <!--Directives-->
 <script src="./app/directives/errsrc.directive.js"></script>
+
+<!--Filters-->
+<script src="./app/filters/model-information.filter.js"></script>
 
 <!--Services-->
 <script src="./app/services/http.service.js"></script>
@@ -80,10 +91,13 @@
 <script src="./app/components/app-header/appheader.component.js"></script>
 <script src="./app/components/app-footer/appfooter.component.js"></script>
 <script src="./app/components/select-family/selectfamily.component.js"></script>
-<script src="./app/components/select-model/selectmodel.component.js"></script>
 <script src="./app/components/car/car.component.js"></script>
 <script src="./app/components/select-options/selectoptions.component.js"></script>
 <script src="./app/components/select-options/steps/steps.component.js"></script>
+<script src="./app/components/select-options/step-one/stepone.component.js"></script>
+<script src="./app/components/select-options/step-two/steptwo.component.js"></script>
+<script src="./app/components/select-options/step-three/stepthree.component.js"></script>
+<script src="./app/components/select-options/step-four/stepfour.component.js"></script>
 
 
 </html>
