--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,9 @@
 <!--trNgGrid Tables-->
 <script src="./assets/js/trNgGrid.min.js"></script>
 
+<!--ngStorage-->
+<script src="./assets/js/ngStorage.min.js"></script>
+
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
@@ -81,6 +84,10 @@
 
 <!--Filters-->
 <script src="./app/filters/model-information.filter.js"></script>
+<script src="./app/filters/trnggrid-curency.filter.js"></script>
+
+<!--Factories-->
+<script src="./app/factories/data.factory.js"></script>
 
 <!--Services-->
 <script src="./app/services/http.service.js"></script>
@@ -97,6 +104,7 @@
 <script src="./app/components/select-options/step-one/stepone.component.js"></script>
 <script src="./app/components/select-options/step-two/steptwo.component.js"></script>
 <script src="./app/components/select-options/step-three/stepthree.component.js"></script>
+<script src="./app/components/select-options/step-three/manual-equipment-form/manualequipment.component.js"></script>
 <script src="./app/components/select-options/step-four/stepfour.component.js"></script>
 
 
