refactor, price on header (not finished), img inheritance

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,9 @@
 <!--ngStorage-->
 <script src="./assets/js/ngStorage.min.js"></script>
 
+<!--Angular Modal-->
+<script src="./assets/js/angular-modal-service.min.js"></script>
+
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
@@ -93,6 +96,7 @@
 <script src="./app/services/http.service.js"></script>
 <script src="./app/services/api.service.js"></script>
 
+
 <!--Components-->
 <script src="./app/components/app/app.component.js"></script>
 <script src="./app/components/app-header/appheader.component.js"></script>
@@ -106,6 +110,7 @@
 <script src="./app/components/select-options/step-three/stepthree.component.js"></script>
 <script src="./app/components/select-options/step-three/manual-equipment-form/manualequipment.component.js"></script>
 <script src="./app/components/select-options/step-four/stepfour.component.js"></script>
+
 
 
 </html>
