Registration Fee Algorithm, Step 4 UI additions, header currentprice simplify

--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,6 @@
 <!--ngStorage-->
 <script src="./assets/js/ngStorage.min.js"></script>
 
-<!--Angular Modal-->
-<script src="./assets/js/angular-modal-service.min.js"></script>
-
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
@@ -95,6 +92,7 @@
 <!--Services-->
 <script src="./app/services/http.service.js"></script>
 <script src="./app/services/api.service.js"></script>
+<script src="./app/services/registration-fee.service.js"></script>
 
 
 <!--Components-->
