integrate services , step four input currency decorator

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
 <link rel="stylesheet"
       href="./assets/styles/css/trNgGrid.min.css">
 
+<!--Angular Loading Bar-->
+<link rel="stylesheet"
+      href="./assets/styles/css/loading-bar.min.css">
+
 <link rel="stylesheet"
       href="./assets/styles/css/main.css">
 
@@ -38,6 +42,7 @@
 <link rel="icon"
       ng-href="assets/img/{{base.theme}}-favicon.ico"
       type="image/x-icon">
+
 
 <body class="{{base.theme}}">
 	<!--[if lt IE 7]>
@@ -73,6 +78,9 @@
 <!--ngStorage-->
 <script src="./assets/js/ngStorage.min.js"></script>
 
+<!--Angular Loading Bar-->
+<script src="./assets/js/loading-bar.min.js"></script>
+
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
@@ -81,6 +89,7 @@
 
 <!--Directives-->
 <script src="./app/directives/errsrc.directive.js"></script>
+<script src="./app/directives/uiCurrency.directive.js"></script>
 
 <!--Filters-->
 <script src="./app/filters/model-information.filter.js"></script>
@@ -108,7 +117,6 @@
 <script src="./app/components/select-options/step-three/stepthree.component.js"></script>
 <script src="./app/components/select-options/step-three/manual-equipment-form/manualequipment.component.js"></script>
 <script src="./app/components/select-options/step-four/stepfour.component.js"></script>
-
 
 
 </html>
