--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,6 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous">
 
-<!--trNgGrid Tables-->
-<link rel="stylesheet"
-      href="./assets/styles/css/trNgGrid.min.css">
 
 <!--Angular Loading Bar-->
 <link rel="stylesheet"
@@ -72,14 +69,14 @@
 <!--Angular i18n-->
 <script src="./assets/js/angular-locale_el-gr.js"></script>
 
-<!--trNgGrid Tables-->
-<script src="./assets/js/trNgGrid.min.js"></script>
-
 <!--ngStorage-->
 <script src="./assets/js/ngStorage.min.js"></script>
 
 <!--Angular Loading Bar-->
 <script src="./assets/js/loading-bar.min.js"></script>
+
+<!--Angular UI Bootstrap-->
+<script src="./assets/js/ui-bootstrap-tpls.js"></script>
 
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
@@ -89,7 +86,6 @@
 
 <!--Directives-->
 <script src="./app/directives/errsrc.directive.js"></script>
-<script src="./app/directives/uiCurrency.directive.js"></script>
 
 <!--Filters-->
 <script src="./app/filters/model-information.filter.js"></script>
@@ -97,6 +93,8 @@
 
 <!--Factories-->
 <script src="./app/factories/data.factory.js"></script>
+<script src="./app/factories/option.factory.js"></script>
+<script src="./app/factories/submitalert.factory.js"></script>
 
 <!--Services-->
 <script src="./app/services/http.service.js"></script>
