temporary solution with *

--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
+<script src="./app/core/app.run.js"></script>
 <script src="./app/core/app.constants.js"></script>
 <script src="./app/core/base.controller.js"></script>
 
