--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,8 @@
 <script src="./app/services/http.service.js"></script>
 <script src="./app/services/api.service.js"></script>
 <script src="./app/services/registration-fee.service.js"></script>
+<script src="./app/services/api-url.service.js"></script>
+<script src="./app/services/redirect-path.service.js"></script>
 
 
 <!--Components-->
