add next button on footer - core changes

--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,7 @@
 <script src="./app/components/car/car.component.js"></script>
 <script src="./app/components/select-options/selectoptions.component.js"></script>
 <script src="./app/components/select-options/steps/steps.component.js"></script>
+<script src="./app/components/select-options/options-footer/optionsfooter.component.js"></script>
 <script src="./app/components/select-options/step-one/stepone.component.js"></script>
 <script src="./app/components/select-options/step-two/steptwo.component.js"></script>
 <script src="./app/components/select-options/step-three/stepthree.component.js"></script>
