finish changes which were asked

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,10 @@
 <!--Angular UI Bootstrap-->
 <script src="./assets/js/ui-bootstrap-tpls.js"></script>
 
+<!--Angular Input Masks-->
+<script src="./assets/js/angular-input-masks-dependencies.min.js"></script>
+<script src="./assets/js/angular-input-masks.min.js"></script>
+
 <!--App Core Files-->
 <script src="./app/core/app.module.js"></script>
 <script src="./app/core/app.config.js"></script>
