significant changes after document

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
 <script src="./app/services/registration-fee.service.js"></script>
 <script src="./app/services/api-url.service.js"></script>
 <script src="./app/services/redirect-path.service.js"></script>
+<script src="./app/services/traffic-charge.service.js"></script>
 
 
 <!--Components-->
