--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,7 @@
 </head>
 
 <!-- Bootstrap 3.3.7 -->
-<link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous">
+<link rel="stylesheet" href="./assets/styles/css/bootstrap.min.css">
 
 
 <!--Angular Loading Bar-->
@@ -56,9 +53,7 @@
 <script src="./assets/js/jquery.min.js"></script>
 
 <!--Bootstrap JS-->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
 
 <!--Angular 1.6.4-->
 <script src="./assets/js/angular.min.js"></script>
@@ -100,6 +95,7 @@
 <script src="./app/factories/data.factory.js"></script>
 <script src="./app/factories/option.factory.js"></script>
 <script src="./app/factories/submitalert.factory.js"></script>
+<script src="./app/factories/modals.factory.js"></script>
 
 <!--Services-->
 <script src="./app/services/http.service.js"></script>
@@ -108,6 +104,7 @@
 <script src="./app/services/api-url.service.js"></script>
 <script src="./app/services/redirect-path.service.js"></script>
 <script src="./app/services/traffic-charge.service.js"></script>
+<script src="./app/services/parse-edit-id.service.js"></script>
 
 
 <!--Components-->
@@ -124,6 +121,7 @@
 <script src="./app/components/select-options/step-three/stepthree.component.js"></script>
 <script src="./app/components/select-options/step-three/manual-equipment-form/manualequipment.component.js"></script>
 <script src="./app/components/select-options/step-four/stepfour.component.js"></script>
+<script src="./app/components/confirm-modal/confirmmodal.component.js"></script>
 
 
 </html>
