gulp and app configuration

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,16 @@
 <!-- Bootstrap 3.3.7 -->
 <link rel="stylesheet" href="./assets/styles/css/bootstrap.min.css">
 
+<!--Fontawesome-->
+<link rel="stylesheet" href="./assets/styles/css/font-awesome.min.css">
+
 
 <!--Angular Loading Bar-->
 <link rel="stylesheet"
       href="./assets/styles/css/loading-bar.min.css">
 
 <link rel="stylesheet"
-      href="./assets/styles/css/main.css">
+      href="./app/app.css">
 
 <link rel="shortcut icon"
       ng-href="assets/img/{{base.theme}}-favicon.ico"
